bynkc/tests/fixtures/positive/59_uses_single/src/ids/main.bynk
commons ids

type UserId = Int where Positive
