bynkc/tests/fixtures/negative/51_uses_after_decls/input.bynk
commons bad

type T = Int where Positive

uses other
